[gd_scene load_steps=5 format=3 uid="uid://c6t0tdq43a0s3"]

[ext_resource type="Theme" uid="uid://d1sjl81lo5my0" path="res://messaging/messaging.tres" id="1_k181i"]
[ext_resource type="Script" path="res://messaging/intro_panel.gd" id="2_bohxj"]
[ext_resource type="LabelSettings" uid="uid://dvrp43egoiu5c" path="res://StylesAndLabels/BigText.tres" id="3_0rrj4"]
[ext_resource type="PackedScene" uid="uid://cwhce3gpdn7t7" path="res://entities/star/StarSceneIntro.tscn" id="4_16sf8"]

[node name="IntroPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k181i")
script = ExtResource("2_bohxj")

[node name="Node2D" parent="." instance=ExtResource("4_16sf8")]
position = Vector2(958, 574)
star_active = false

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 857.0
offset_top = 48.0
offset_right = 897.0
offset_bottom = 88.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = -73.0
offset_top = -7.0
offset_right = 346.0
offset_bottom = 48.0
text = "Welcome to Starlifter!"
label_settings = ExtResource("3_0rrj4")

[node name="Control2" type="Control" parent="."]
anchors_preset = 0
offset_left = 643.0
offset_top = 147.0
offset_right = 683.0
offset_bottom = 187.0

[node name="Description" type="Label" parent="Control2"]
layout_mode = 0
offset_left = -224.0
offset_top = -18.0
offset_right = 924.0
offset_bottom = 153.0
theme_override_font_sizes/font_size = 25
text = "Mine resources from planets and build giant structures to turn a dying brown dwarf into a main-sequence star."
label_settings = ExtResource("3_0rrj4")
autowrap_mode = 2

[node name="Control3" type="Control" parent="."]
anchors_preset = 0
offset_left = 897.0
offset_top = 641.0
offset_right = 1076.0
offset_bottom = 715.0

[node name="StartButton" type="Button" parent="Control3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.257
anchor_top = 3.162
anchor_right = -0.257
anchor_bottom = 3.162
offset_left = 0.00299835
offset_top = 0.0119934
offset_right = 218.003
offset_bottom = 63.012
text = "New Game"

[connection signal="pressed" from="Control3/StartButton" to="." method="_on_start_button_pressed"]
